--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@ body {
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
+  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden; }
 
 .App {
   height: 100vh;
@@ -40,6 +41,17 @@ body {
 
 .App main {
   grid-area: m; }
+
+.App main .container {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 5rem; }
+
+.App main .summary {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 75ch; }
 
 .App footer {
   grid-area: f; }
