--- a/src/index.css
+++ b/src/index.css
@@ -17,13 +17,32 @@ body {
 .App {
   height: 100vh;
   display: grid;
-  grid-gap: .5rem;
+  grid-gap: .8rem;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 100px auto 100px;
-  grid-template-areas: "t t t t t t t t t t t t" "m m m m m m m m m m m m" "f f f f f f f f f f f f"; }
+  grid-template-rows: 10vh 60vh auto 5vh;
+  grid-template-areas: "t t t t t t t t t t t t" "j j j j j j j j j j j j" "m m m m m m m m m m m m" "f f f f f f f f f f f f"; }
 
 .App header {
   grid-area: t; }
+
+.App .jumbotron {
+  grid-area: j;
+  background: url(./assets/images/promo.jpg);
+  color: #fff;
+  border-radius: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 4rem 0; }
+
+.App .jumbotron .lead {
+  width: 40%;
+  padding-left: 1rem; }
+
+.App .jumbotron .display-4 {
+  font-size: 4rem;
+  font-weight: 700;
+  padding-left: 1rem; }
 
 .App .container-fluid {
   padding: 0;
