--- a/src/index.scss
+++ b/src/index.scss
@@ -33,6 +33,10 @@ body {
 
     header {
       grid-area: t;
+      .navbar-brand {
+        width: 4.5rem;
+        text-align: center;
+      }
     }
 
     .jumbotron {
@@ -62,7 +66,6 @@ body {
         background: var(--main-color);
         color: #fff;
         display: block;
-        border-radius: 5px;
         div {
           padding: 0 5px;
           font-size: 16px;
