--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
   display: grid;
   grid-gap: .8rem;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 10vh 60vh auto 5vh;
+  grid-template-rows: 12vh 60vh auto 6vh;
   grid-template-areas: "t t t t t t t t t t t t" "j j j j j j j j j j j j" "m m m m m m m m m m m m" "f f f f f f f f f f f f"; }
 
 .App header {
@@ -40,7 +40,7 @@ body {
   padding: 4rem 0; }
 
 .App .jumbotron .lead {
-  width: 40%;
+  width: 50%;
   padding-left: 1rem; }
 
 .App .jumbotron .display-4 {
@@ -78,3 +78,7 @@ body {
 .App footer {
   grid-area: f;
   text-align: center; }
+
+@media (max-width: 750px) {
+  .App .jumbotron .lead {
+    width: 80%; } }
