--- a/src/index.scss
+++ b/src/index.scss
@@ -24,7 +24,7 @@ body {
   display: grid;
   grid-gap: .8rem;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 10vh 60vh auto 5vh;
+  grid-template-rows: 12vh 60vh auto 6vh;
   grid-template-areas: 
     "t t t t t t t t t t t t"
     "j j j j j j j j j j j j"
@@ -49,7 +49,7 @@ body {
       background-position:center;
       padding: 4rem 0;
       .lead {
-        width: 40%;
+        width: 50%;
         padding-left: 1rem
       }
       .display-4 {
@@ -93,6 +93,15 @@ body {
       grid-area: f;
       text-align: center;
     }
+}
 
-
+@media (max-width: 750px) {
+  .App {
+    .jumbotron {
+      .lead {
+      width: 80%;
+    }
+    
+    }
+  }
 }
