--- a/src/index.scss
+++ b/src/index.scss
@@ -100,8 +100,11 @@ body {
     .jumbotron {
       .lead {
       width: 80%;
+      }
     }
-    
+
+    main.container{
+      padding: 0 .4rem;
     }
   }
 }
