--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden; }
 
+input[type="text"] {
+  text-transform: uppercase; }
+
 .App {
   height: 100vh;
   display: grid;
@@ -75,6 +78,9 @@ body {
   text-overflow: ellipsis;
   max-width: 75ch; }
 
+.App main .help-block {
+  margin-top: 10px; }
+
 .App footer {
   grid-area: f;
   text-align: center; }
@@ -83,4 +89,11 @@ body {
   .App .jumbotron .lead {
     width: 80%; }
   .App main.container {
-    padding: 0 .4rem; } }
+    padding: 0 .4rem; }
+  .App main.container .lead {
+    font-size: 1rem; }
+  .App main.container .display-4 {
+    font-size: 1.2rem;
+    font-weight: 700; }
+  .App main.container h3.text-center {
+    font-size: 1rem; } }
