--- a/src/index.scss
+++ b/src/index.scss
@@ -128,6 +128,10 @@ input[type="text"] {
       }
     }
 
+    .grant-info {
+      flex-flow: column;
+    }
+    
     main.container{
       padding: 0 .4rem;
       .lead {
